--- a/packages/components/src/components/ui/line-item/sc-line-item.scss
+++ b/packages/components/src/components/ui/line-item/sc-line-item.scss
@@ -50,6 +50,7 @@
   align-items: center;
   justify-content: flex-end;
   flex-wrap: wrap;
+  align-self: flex-end;
   width: 100%;
   margin-top: 20px;
 }
