--- a/packages/components/src/components/ui/coupon-form/sc-coupon-form.scss
+++ b/packages/components/src/components/ui/coupon-form/sc-coupon-form.scss
@@ -83,3 +83,18 @@ sc-button {
     text-align: right;
   }
 }
+
+.coupon__status {
+  font-size: var(--sc-font-size-small);
+  line-height: var(--sc-line-height-dense);
+  color: var(--sc-color-warning-700);
+  display: inline-flex;
+  gap: var(--sc-spacing-x-small);
+  align-items: flex-start;
+  text-align: left;
+
+  sc-icon {
+    flex: 0 0 1em;
+    margin-top: 0.25em;
+  }
+}
