--- a/templates/parts/upsell-info.html
+++ b/templates/parts/upsell-info.html
@@ -1,8 +1,8 @@
-<!-- wp:group {"style":{"color":{"background":"#f9fafb"},"spacing":{"padding":{"top":"80px","bottom":"80px","left":"0px","right":"0px"}},"position":{"type":""},"dimensions":{"minHeight":"100vh"}},"layout":{"type":"flex","orientation":"vertical","verticalAlignment":"center","justifyContent":"center"}} -->
+<!-- wp:group {"style":{"color":{"background":"#f9fafb"},"spacing":{"padding":{"top":"80px","bottom":"80px","left":"0px","right":"0px"}},"position":{"type":""},"dimensions":{"minHeight":"100vh"}},"layout":{"type":"constrained","contentSize":"1080px"}} -->
 <div class="wp-block-group has-background"
 	style="background-color:#f9fafb;min-height:100vh;padding-top:80px;padding-right:0px;padding-bottom:80px;padding-left:0px">
 	<!-- wp:surecart/upsell -->
-	<!-- wp:group {"style":{"spacing":{"blockGap":"25px","margin":{"bottom":"80px"}}},"layout":{"type":"constrained"}} -->
+	<!-- wp:group {"style":{"spacing":{"blockGap":"25px","margin":{"bottom":"80px"}}},"layout":{"type":"default"}} -->
 	<div class="wp-block-group" style="margin-bottom:80px">
 		<!-- wp:surecart/upsell-countdown-timer {"style":{"typography":{"fontSize":"16px","fontStyle":"normal","fontWeight":"500"}}} /-->
 
@@ -12,7 +12,7 @@
 	</div>
 	<!-- /wp:group -->
 
-	<!-- wp:group {"layout":{"type":"constrained","contentSize":"1180px"}} -->
+	<!-- wp:group {"layout":{"type":"default"}} -->
 	<div class="wp-block-group">
 		<!-- wp:group {"style":{"border":{"color":"#dfe4ea","style":"solid","width":"1px","radius":"4px"},"spacing":{"padding":{"top":"50px","bottom":"50px","left":"50px","right":"50px"}}},"backgroundColor":"ast-global-color-5","layout":{"type":"default"}} -->
 		<div class="wp-block-group has-border-color has-ast-global-color-5-background-color has-background"
