--- a/templates/templates/single-upsell.html
+++ b/templates/templates/single-upsell.html
@@ -1,9 +1,8 @@
-<!-- wp:group {"style":{"color":{"background":"#f9fafb"},"spacing":{"padding":{"top":"80px","bottom":"80px","left":"0px","right":"0px"}},"position":{"type":""},"dimensions":{"minHeight":"100vh"}},"layout":{"type":"flex","orientation":"vertical","verticalAlignment":"center","justifyContent":"center"}} -->
+<!-- wp:group {"style":{"color":{"background":"#f9fafb"},"spacing":{"padding":{"top":"80px","bottom":"80px","left":"0px","right":"0px"}},"position":{"type":""},"dimensions":{"minHeight":"100vh"}},"layout":{"type":"constrained","contentSize":"1180px"}} -->
 <div class="wp-block-group has-background"
 	style="background-color:#f9fafb;min-height:100vh;padding-top:80px;padding-right:0px;padding-bottom:80px;padding-left:0px">
 	<!-- wp:surecart/upsell -->
-	<!-- wp:surecart/upsell -->
-	<!-- wp:group {"style":{"spacing":{"margin":{"bottom":"80px"}}},"layout":{"type":"constrained"}} -->
+	<!-- wp:group {"style":{"spacing":{"margin":{"bottom":"80px"}}},"layout":{"type":"default"}} -->
 	<div class="wp-block-group" style="margin-bottom:80px">
 		<!-- wp:surecart/upsell-countdown-timer {"style":{"typography":{"fontSize":"16px","fontStyle":"normal","fontWeight":"500"}}} /-->
 
@@ -13,7 +12,7 @@
 	</div>
 	<!-- /wp:group -->
 
-	<!-- wp:group {"layout":{"type":"constrained","contentSize":"1180px"}} -->
+	<!-- wp:group {"layout":{"type":"default"}} -->
 	<div class="wp-block-group">
 		<!-- wp:group {"style":{"border":{"color":"#dfe4ea","style":"solid","width":"1px","radius":"4px"},"spacing":{"padding":{"top":"50px","bottom":"50px","left":"50px","right":"50px"}}},"backgroundColor":"base-2","layout":{"type":"default"}} -->
 		<div class="wp-block-group has-border-color has-base-2-background-color has-background"
@@ -41,7 +40,7 @@
 
 					<!-- wp:surecart/upsell-submit /-->
 
-					<!-- wp:surecart/upsell-no-thanks {"className":"is-style-outline","backgroundColor":"base-2","style":{"border":{"width":"0px","style":"none"}}} /-->
+					<!-- wp:surecart/upsell-no-thanks {"style":{"border":{"width":"0px","style":"none"}},"backgroundColor":"base-2","className":"is-style-outline"} /-->
 				</div>
 				<!-- /wp:surecart/column -->
 			</div>
