--- a/templates/templates/single-product.html
+++ b/templates/templates/single-product.html
@@ -1,8 +1,8 @@
 <!-- wp:template-part {"slug":"header","tagName":"header"} /-->
 
-<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|small","bottom":"var:preset|spacing|small"},"margin":{"top":"0","bottom":"0"}}},"layout":{"inherit":true,"type":"constrained"}} -->
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|small","bottom":"var:preset|spacing|small"}}},"layout":{"inherit":true,"type":"constrained"}} -->
 <div class="wp-block-group"
-	style="margin-top:0;margin-bottom:0;padding-top:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--small)">
+	style="padding-top:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--small)">
 	<!-- wp:group {"align":"wide"} -->
 	<div class="wp-block-group alignwide"><!-- wp:surecart/columns -->
 		<div class="wp-block-surecart-columns">
