Update gap size in empty component

--- a/packages/components/src/components/ui/empty/sc-empty.scss
+++ b/packages/components/src/components/ui/empty/sc-empty.scss
@@ -8,7 +8,7 @@
   align-items: center;
   padding: var(--sc-spacing-large);
   text-align: center;
-  gap: var(--sc-spacing-x-small);
+  gap: var(--sc-spacing-small);
   color: var(--sc-empty-color, var(--sc-color-gray-500));
 
   sc-icon {
