--- a/packages/components/src/components/ui/sc-prose/sc-prose.css
+++ b/packages/components/src/components/ui/sc-prose/sc-prose.css
@@ -17,7 +17,7 @@
   line-height: 1.75; */
 }
 
-::slotted([class~="lead"]) {
+::slotted([class~='lead']) {
   color: var(--sc-input-color);
   font-size: var(--sc-input-spacing-small);
   line-height: 1.6;
@@ -30,7 +30,7 @@
 }
 
 ::slotted(ol) {
-  padding:0;
+  padding: 0;
   margin-top: var(--sc-input-spacing-small);
   margin-bottom: var(--sc-input-spacing-small);
 }
@@ -56,7 +56,7 @@
   color: var(--sc-color-gray-800);
   border-left-width: 0.25rem;
   border-left-color: var(--sc-color-gray-400);
-  quotes: "\201C""\201D""\2018""\2019";
+  quotes: '\201C''\201D''\2018''\2019';
   margin-top: 1.6em;
   margin-bottom: 1.6em;
   padding-left: 1em;
@@ -115,11 +115,11 @@
 }
 
 ::slotted(code::before) {
-  content: "`";
+  content: '`';
 }
 
 ::slotted(code::after) {
-  content: "`";
+  content: '`';
 }
 
 ::slotted(pre) {
@@ -150,11 +150,11 @@
 }
 
 ::slotted(pre code::before) {
-  content: "";
+  content: '';
 }
 
 ::slotted(pre code::after) {
-  content: "";
+  content: '';
 }
 
 ::slotted(table) {
@@ -243,11 +243,11 @@
   margin-bottom: var(--sc-input-spacing-small);
 }
 
-::slotted( ol > li > *:first-child) {
+::slotted(ol > li > *:first-child) {
   margin-top: var(--sc-input-spacing-small);
 }
 
-::slotted( ol > li > *:last-child) {
+::slotted(ol > li > *:last-child) {
   margin-bottom: var(--sc-input-spacing-small);
 }
 
@@ -292,9 +292,9 @@
 }
 
 ::slotted(:first-child) {
-  margin-top: 0;
+  margin-top: 0 !important;
 }
 
 ::slotted(:last-child) {
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
