--- a/packages/blocks-next/src/styles/choice.scss
+++ b/packages/blocks-next/src/styles/choice.scss
@@ -2,15 +2,22 @@
 	margin: 0;
 	display: grid;
 	gap: var(--sc-choices-gap, 10px);
+	grid-template-columns: repeat(var(--columns, 1), 1fr);
+	grid-auto-rows: 1fr;
+
+	> * {
+		height: 100%;
+	}
 }
 
 .sc-choice {
 	display: flex;
 	flex-direction: column;
 	align-items: stretch;
-	justify-content: stretch;
+	justify-content: center;
 	min-width: 0;
 	align-self: stretch;
+	height: 100%;
 	background: var(--sc-choice-background-color);
 	font-family: var(--sc-input-font-family);
 	font-size: var(--sc-input-font-size-medium);
