--- a/packages/components/src/components/ui/sc-shipping-choices/sc-shipping-choices.scss
+++ b/packages/components/src/components/ui/sc-shipping-choices/sc-shipping-choices.scss
@@ -8,6 +8,7 @@
   margin: 0;
   box-sizing: border-box;
   border-bottom: var(--sc-input-border, 1px solid var(--sc-color-gray-300));
+  background-color: var(--sc-shipping-choice-background-color, var(--sc-color-white));
 
   &__empty {
     background: var(--sc-alert-background-color, var(--sc-color-gray-100));
