Add box-sizing property to button link

--- a/packages/blocks-next/src/styles/wp-button.scss
+++ b/packages/blocks-next/src/styles/wp-button.scss
@@ -1,6 +1,7 @@
 .sc-button__link {
 	position: relative;
 	display: inline-block;
+	box-sizing: border-box;
 
 	[disabled] {
 		pointer-events: none;
