--- a/packages/blocks-next/src/styles/input-group.scss
+++ b/packages/blocks-next/src/styles/input-group.scss
@@ -1,116 +1,118 @@
 .sc-input-group {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: stretch;
-    width: 100%;
-    border: var(--sc-input-border-width) solid var(--sc-color-gray-300);
-    border-radius: var(--sc-border-radius-medium);
-    transition: var(--sc-transition-medium);
-    box-sizing: border-box;
-    box-shadow: var(--sc-input-box-shadow);
-    transition: var(--sc-input-transition, var(--sc-transition-medium)) color, var(--sc-input-transition, var(--sc-transition-medium)) border,
-        var(--sc-input-transition, var(--sc-transition-medium)) box-shadow;
+	position: relative;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: stretch;
+	width: 100%;
+	border: var(--sc-input-border-width) solid var(--sc-color-gray-300);
+	background-color: var(--sc-input-background-color);
+	border-radius: var(--sc-border-radius-medium);
+	transition: var(--sc-transition-medium);
+	box-sizing: border-box;
+	box-shadow: var(--sc-input-box-shadow);
+	transition: var(--sc-input-transition, var(--sc-transition-medium)) color,
+		var(--sc-input-transition, var(--sc-transition-medium)) border,
+		var(--sc-input-transition, var(--sc-transition-medium)) box-shadow;
 
-    &::-webkit-search-decoration,
-    &::-webkit-search-cancel-button,
-    &::-webkit-search-results-button,
-    &::-webkit-search-results-decoration {
-        -webkit-appearance: none;
-    }
+	&::-webkit-search-decoration,
+	&::-webkit-search-cancel-button,
+	&::-webkit-search-results-button,
+	&::-webkit-search-results-decoration {
+		-webkit-appearance: none;
+	}
 
-    &:-webkit-autofill,
-    &:-webkit-autofill:hover,
-    &:-webkit-autofill:focus,
-    &:-webkit-autofill:active {
-        box-shadow: 0 0 0 var(--sc-input-height-large) var(--sc-input-background-color-hover) inset !important;
-        -webkit-text-fill-color: var(--sc-input-color);
-    }
+	&:-webkit-autofill,
+	&:-webkit-autofill:hover,
+	&:-webkit-autofill:focus,
+	&:-webkit-autofill:active {
+		box-shadow: 0 0 0 var(--sc-input-height-large)
+			var(--sc-input-background-color-hover) inset !important;
+		-webkit-text-fill-color: var(--sc-input-color);
+	}
 
-    &:hover {
-        background-color: var(--sc-input-background-color-hover);
-        border-color: var(--sc-input-border-color-hover);
-        z-index: 7;
+	&:hover {
+		background-color: var(--sc-input-background-color-hover);
+		border-color: var(--sc-input-border-color-hover);
+		z-index: 7;
 
-        .sc-form-control {
-            color: var(--sc-input-color-hover);
-        }
-    }
+		.sc-form-control {
+			color: var(--sc-input-color-hover);
+		}
+	}
 
-    &:focus-within {
-        background-color: var(--sc-input-background-color-focus);
-        border-color: var(--sc-input-border-color-focus);
-        box-shadow: 0 0 0 var(--sc-focus-ring-width) var(--sc-focus-ring-color-primary);
-        z-index: 8;
-    }
+	&:focus-within {
+		background-color: var(--sc-input-background-color-focus);
+		border-color: var(--sc-input-border-color-focus);
+		box-shadow: 0 0 0 var(--sc-focus-ring-width)
+			var(--sc-focus-ring-color-primary);
+		z-index: 8;
+	}
 
-    // Override Form control styles.
-    >.sc-form-control {
-        position: relative;
-        flex: 1 1 auto;
-        width: 1%;
-        min-width: 0;
-        border: 0 !important;
-        box-shadow: none !important;
-        padding: 0 var(--sc-input-spacing-medium);
-        background-color: transparent;
-        border-radius: 0 !important;
+	// Override Form control styles.
+	> .sc-form-control {
+		position: relative;
+		flex: 1 1 auto;
+		width: 1%;
+		min-width: 0;
+		border: 0 !important;
+		box-shadow: none !important;
+		padding: 0 var(--sc-input-spacing-medium);
+		background-color: transparent;
+		border-radius: 0 !important;
 
-        &:focus {
-            z-index: 5;
-            box-shadow: none;
-            border: 0;
-            color: var(--sc-input-color-focus);
-        }
-    }
+		&:focus {
+			z-index: 5;
+			box-shadow: none;
+			border: 0;
+			color: var(--sc-input-color-focus);
+		}
+	}
 
-    // Addon Text.
-    &-text {
-        display: flex;
-        align-items: center;
-        padding: 0 var(--sc-spacing-small);
-        font-size: var(--sc-font-size-medium);
-        font-weight: var(--sc-font-weight-normal);
-        line-height: var(--sc-line-height-normal);
-        color: var(--sc-input-color);
-        text-align: center;
-        white-space: nowrap;
-        opacity: 0.5;
-    }
+	// Addon Text.
+	&-text {
+		display: flex;
+		align-items: center;
+		padding: 0 var(--sc-spacing-small);
+		font-size: var(--sc-font-size-medium);
+		font-weight: var(--sc-font-weight-normal);
+		line-height: var(--sc-line-height-normal);
+		color: var(--sc-input-color);
+		text-align: center;
+		white-space: nowrap;
+		opacity: 0.5;
+	}
 
-    // Large input group.
-    &-lg {
+	// Large input group.
+	&-lg {
+		> .sc-form-control,
+		> .sc-input-group-text {
+			padding: var(--sc-spacing-medium) var(--sc-spacing-large);
+			font-size: var(--sc-font-size-large);
+			border-radius: var(--sc-border-radius-large);
+		}
 
-        >.sc-form-control,
-        >.sc-input-group-text {
-            padding: var(--sc-spacing-medium) var(--sc-spacing-large);
-            font-size: var(--sc-font-size-large);
-            border-radius: var(--sc-border-radius-large);
-        }
+		> .sc-input-group-text {
+			padding: var(--sc-spacing-xx-small) var(--sc-spacing-small);
+		}
+	}
 
-        >.sc-input-group-text {
-            padding: var(--sc-spacing-xx-small) var(--sc-spacing-small);
-        }
-    }
+	// Small input group.
+	&-sm {
+		> .sc-form-control,
+		> .sc-input-group-text {
+			padding: var(--sc-spacing-xx-small) var(--sc-spacing-x-small);
+			font-size: var(--sc-font-size-x-small);
+			border-radius: var(--sc-border-radius-small);
+		}
+	}
 
-    // Small input group.
-    &-sm {
+	// More padding for addon-text.
+	> :not(:last-child),
+	> :nth-last-child(n + 3) {
+		padding-right: var(--sc-spacing-xx-small);
+	}
 
-        >.sc-form-control,
-        >.sc-input-group-text {
-            padding: var(--sc-spacing-xx-small) var(--sc-spacing-x-small);
-            font-size: var(--sc-font-size-x-small);
-            border-radius: var(--sc-border-radius-small);
-        }
-    }
-
-    // More padding for addon-text.
-    > :not(:last-child),
-    > :nth-last-child(n + 3) {
-        padding-right: var(--sc-spacing-x-small);
-    }
-
-    > :not(:first-child) {
-        padding-left: var(--sc-spacing-x-small);
-    }
+	> :not(:first-child) {
+		padding-left: var(--sc-spacing-xx-small);
+	}
 }
