Focus visible css.

--- a/packages/blocks-next/src/styles/choice.scss
+++ b/packages/blocks-next/src/styles/choice.scss
@@ -42,6 +42,12 @@
 		color 150ms ease, box-shadow 150ms ease;
 	box-sizing: border-box;
 
+	&:focus-visible {
+		outline-color: var(--sc-color-primary-500);
+		outline-offset: 4px;
+		outline-width: 2px;
+	}
+
 	&--is-rtl {
 		text-align: right;
 	}
