Fixed the Previous Next disbled styling & added flex styling for numbers, Added rendering & functionality for pagination numbers

--- a/packages/blocks-next/src/styles/product-pagination.scss
+++ b/packages/blocks-next/src/styles/product-pagination.scss
@@ -1,5 +1,6 @@
 $pagination-margin: 0.5em;
 .wp-block-surecart-product-pagination {
+	margin-top: 1em;
 	// Increased specificity to override blocks default margin.
 	> .wp-block-surecart-product-pagination-next,
 	> .wp-block-surecart-product-pagination-previous,
@@ -11,6 +12,11 @@ $pagination-margin: 0.5em;
 		&:last-child {
 			/*rtl:ignore*/
 			margin-right: 0;
+		}
+		&.disabled {
+			pointer-events: none;
+			text-decoration: none;
+			opacity: 0.5;
 		}
 	}
 
@@ -25,7 +31,6 @@ $pagination-margin: 0.5em;
 			margin-inline-end: auto;
 		}
 	}
-
 
 	.wp-block-surecart-product-pagination-previous-arrow {
 		margin-right: 1ch;
