--- a/packages/components/src/themes/base.css
+++ b/packages/components/src/themes/base.css
@@ -755,3 +755,20 @@ sc-checkout [hidden] {
   width: 1px;
   word-wrap: normal !important;
 }
+
+span.sc-icon {
+  --width: 1em;
+  --height: 1em;
+  display: inline-block;
+  width: var(--width);
+  height: var(--height);
+  contain: strict;
+  box-sizing: content-box !important;
+}
+
+span.sc-icon svg {
+  display: block;
+  height: 100%;
+  width: 100%;
+  stroke-width: var(--sc-icon-stroke-width, 2px);
+}
