Added too separate blocks for search , input & button

--- a/packages/blocks-next/src/styles/input-group.scss
+++ b/packages/blocks-next/src/styles/input-group.scss
@@ -56,6 +56,7 @@
 		min-width: 0;
 		border: 0 !important;
 		box-shadow: none !important;
+		outline: none !important;
 		padding: 0 var(--sc-input-spacing-medium);
 		background-color: transparent;
 		border-radius: 0 !important;
