--- a/packages/blocks-next/src/blocks/product-list-search/styles.scss
+++ b/packages/blocks-next/src/blocks/product-list-search/styles.scss
@@ -1,5 +1,5 @@
 .wp-block-surecart-product-list-search {
-	button.sc-input-group-text {
+	button.wp-block-surecart-product-list-search-button {
 		opacity: 1;
 		padding-top: 0.3em;
 		padding-bottom: 0.3em;
