--- a/packages/blocks-next/src/styles/drawer.scss
+++ b/packages/blocks-next/src/styles/drawer.scss
@@ -34,7 +34,14 @@
 	}
 
 	&::backdrop {
-		background: var(--sc-color-gray-900);
+		display: block;
+		position: fixed;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		background-color: var(--sc-overlay-background-color);
+		pointer-events: all;
 		animation: backdrop-fade-in
 			var(--sc-drawer-transition-speed, var(--sc-transition-medium)) ease
 			backwards;
