--- a/packages/blocks-next/src/styles/drawer.scss
+++ b/packages/blocks-next/src/styles/drawer.scss
@@ -8,7 +8,7 @@
 	box-shadow: var(--sc-shadow-x-large);
 	padding: 0;
 	margin: auto;
-	box-shadow: var(--sc-shadow-x-large);
+	box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.1);
 	border: none;
 	border-radius: 0;
 	outline: none;
@@ -27,6 +27,12 @@
 		animation: slide-in
 			var(--sc-drawer-transition-speed, var(--sc-transition-medium))
 			cubic-bezier(0.4, 0, 0.2, 1);
+
+		&::backdrop {
+			animation: backdrop-fade-in
+				var(--sc-drawer-transition-speed, var(--sc-transition-medium)) ease
+				forwards;
+		}
 	}
 
 	&:modal {
@@ -34,13 +40,7 @@
 	}
 
 	&::backdrop {
-		display: block;
-		position: fixed;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-		background-color: var(--sc-overlay-background-color);
+		background-color: var(--sc-color-gray-800);
 		pointer-events: all;
 		animation: backdrop-fade-in
 			var(--sc-drawer-transition-speed, var(--sc-transition-medium)) ease
