--- a/packages/blocks-next/src/styles/image-slider.scss
+++ b/packages/blocks-next/src/styles/image-slider.scss
@@ -60,15 +60,9 @@
 		cursor: grab;
 
 		&.swiper-slide {
-			height: var(--sc-product-slider-height, auto);
-		}
-
-		.swiper-slide-img {
-			width: 100%;
-			height: 100%;
-			text-align: center;
 			border-radius: var(--sc-border-radius-medium);
 			background: rgba(0, 0, 0, 0.1);
+			overflow: hidden;
 
 			img {
 				display: block;
@@ -76,7 +70,7 @@
 				max-width: 100%;
 				height: auto;
 				object-fit: contain;
-				border-radius: var(--sc-border-radius-medium);
+				object-postion: center;
 			}
 		}
 	}
@@ -117,15 +111,6 @@
 		&:focus {
 			background: rgba(0, 0, 0, 0.1);
 			border: none;
-		}
-	}
-
-	&--is-fixed-height .sc-image-slider__slider {
-		.swiper-slide-img {
-			background: transparent;
-			img {
-				max-height: 100%;
-			}
 		}
 	}
 }
