--- a/packages/blocks-next/src/styles/dropdown.scss
+++ b/packages/blocks-next/src/styles/dropdown.scss
@@ -29,8 +29,7 @@
 		transition: var(--sc-transition-fast) opacity,
 			var(--sc-transition-fast) transform;
 		z-index: 5;
-		padding-top: 0.25em;
-		padding-bottom: 0.25em;
+		padding: var(--sc-spacing-x-small) 0;
 		margin-top: 0.5em;
 		position: absolute;
 	}
@@ -57,7 +56,8 @@
 		cursor: pointer;
 		text-decoration: none;
 
-		&.menu-item--focused:not(.menu-item--disabled) &:hover {
+		&.menu-item--focused:not(.menu-item--disabled),
+		&:hover {
 			outline: none;
 			background-color: var(
 				--sc-menu-item-background-focused,
