--- a/packages/components/src/components/ui/switch/sc-switch.scss
+++ b/packages/components/src/components/ui/switch/sc-switch.scss
@@ -28,7 +28,7 @@
 }
 
 .switch--editing {
-  cursor: initial
+  cursor: initial;
 }
 
 .switch__control {
@@ -51,7 +51,8 @@
     border-radius: 50%;
     border: solid var(--sc-input-border-width) var(--sc-input-border-color);
     transform: translateX(calc(var(--width) / -2 + var(--thumb-size) / 2 - (var(--thumb-size) - var(--height)) / 2));
-    transition: var(--sc-input-transition, var(--sc-transition-medium)) transform ease, var(--sc-input-transition, var(--sc-transition-medium)) background-color, var(--sc-input-transition, var(--sc-transition-medium)) border-color, var(--sc-input-transition, var(--sc-transition-medium)) box-shadow;
+    transition: var(--sc-input-transition, var(--sc-transition-medium)) transform ease, var(--sc-input-transition, var(--sc-transition-medium)) background-color,
+      var(--sc-input-transition, var(--sc-transition-medium)) border-color, var(--sc-input-transition, var(--sc-transition-medium)) box-shadow;
   }
 
   input[type='checkbox'] {
@@ -60,6 +61,11 @@
     padding: 0;
     margin: 0;
     pointer-events: none;
+  }
+
+  &:has(:focus-visible) {
+    outline: 2px solid var(--sc-focus-ring-color-primary);
+    outline-offset: 2px;
   }
 }
 
@@ -129,7 +135,7 @@
 }
 
 .switch--is-required .switch__title:after {
-  content: " *";
+  content: ' *';
   color: var(--sc-color-danger-500);
 }
 
