--- a/packages/blocks-next/src/blocks/product-price/style.scss
+++ b/packages/blocks-next/src/blocks/product-price/style.scss
@@ -1,6 +1,5 @@
 .wp-block-surecart-product-price-v2 {
 	margin: 5px 0;
 	font-weight: 500;
-	color: #222222;
-	line-height: 1.2;
+	opacity: 0.65;
 }
